data/derived/comb/progs/unify/prog6692.ml.out
Characters 11-24:
  let _ =eval(sampleExpr1);;
             ^^^^^^^^^^^^^
Error: This expression has type expr but an expression was expected of type
         expr * float * float
